can't use Files.readString prior to Java 11